force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <defaultValue>&apos;DESKTOP&apos;</defaultValue>
    <description>device form factor that was used to sign up for this shift hours</description>
    <inlineHelpText>device form factor that was used to sign up for this shift hours</inlineHelpText>
    <label>Device Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>