force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Send_Email_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Confirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email Confirmation</label>
    <type>Checkbox</type>
</CustomField>