force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Shift_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Date_Time__c</fullName>
    <formula>GW_Volunteers__Volunteer_Shift__r.End_Date_Time__c</formula>
    <label>Shift End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>