force-app/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Signup_Channel__c.field-meta.xml
<CustomField>
    <fullName>Signup_Channel__c</fullName>
    <description>where this volunteer was signed up for this shift</description>
    <inlineHelpText>where this volunteer was signed up for this shift</inlineHelpText>
    <label>Signup Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Link</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>